@@ -1,3 +1,6 @@
+ 621.	[port]		Disable IPv6 at runtime if they are unusable.  This
+			mostly affects Red Hat Linux 7.0.
+
  620.	[bug]		dns_master_load*inc() now require 'task' and 'load'
 			to be non-null.  Also 'done' will not be called if
 			dns_master_load*inc() fails immediately. [RT #565]
